tests/baselines/reference/pathsValidation1.errors.txt
tsconfig.json(3,9): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.
tsconfig.json(5,18): error TS5063: Substitutions for pattern '*' should be an array.


==== tsconfig.json (2 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
            "paths": {
                "*": "*"
                     ~~~
!!! error TS5063: Substitutions for pattern '*' should be an array.
            }
        }
    }
==== a.ts (0 errors) ====
    let x = 1;